# php-to-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/php-parser/: Cargo.toml
crates/php-parser/src/: analyzer.rs  detector.rs  lib.rs  types.rs
crates/php-parser/tests/: wordpress_plugin.rs
crates/rust-generator/: Cargo.toml
crates/rust-generator/src/: context.rs  generator.rs  lib.rs  llm.rs  pattern_converter.rs  prompt.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: comparator.rs  compiler.rs  diff_report.rs  fix_loop.rs  lib.rs
profiles/wordpress/: api_mappings.toml  db_patterns.toml  function_categories.toml  hooks.toml
results/: oss-conversion-report.md
tests/fixtures/02_simple_function/: expected.rs  input.php
tests/fixtures/03_class/: expected.rs  input.php
tests/fixtures/04_array_manipulation/: expected.rs  input.php
tests/fixtures/05_wordpress_hook/: expected.rs  input.php
tests/fixtures/10_wordpress_plugin/expected/: Cargo.toml
tests/fixtures/10_wordpress_plugin/expected/src/: my_plugin.rs
tests/fixtures/10_wordpress_plugin/input/: my-plugin.php
