[package]
name = "php-to-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "php-to-rust"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
php-parser = { path = "../php-parser" }
rust-generator = { path = "../rust-generator" }
verifier = { path = "../verifier" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
