[package]
name = "verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rust-generator = { path = "../rust-generator" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
regex.workspace = true
tracing.workspace = true
